[tool.poetry]
name = "lusid-sdk-examples"
version = "0.1.0"
description = ""
authors = ["FINBOURNE Technology <engineering@finbourne.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lusid_sdk_examples"}]

[tool.poetry.dependencies]
python = "^3.9"
lusidfeature = "^0.2.4"
pytest-asyncio = "^0.21.0"
pytest = "^7.3.2"
requests = "^2.31.0"
types-pytz = "^2023.3.0.0"
pytz = "^2023.3"
pydantic = "^1.10.9"
lusid = {path = "/Users/adammassoud/work/code/repos/lusid-sdk-examples-python/lusid-2.0.0-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
