[tool.poetry]
name = "lusid-sdk-examples"
version = "0.1.0"
description = ""
authors = ["FINBOURNE Technology <engineering@finbourne.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lusid_sdk_examples"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest-asyncio = "^0.21.0"
pytest = "^7.3.2"
pytz = "^2023.3"
lusid-sdk = "^2.0.174"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.3.0"
types-pytz = "^2023.3.1.1"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "pydantic.mypy"